--- a/Konvolucio.MCEL181123/Konvolucio.MCEL181123.csproj
+++ b/Konvolucio.MCEL181123/Konvolucio.MCEL181123.csproj
@@ -82,7 +82,9 @@
     <Compile Include="Events\StopAppEvent.cs" />
     <Compile Include="Events\UnitTest_EventAggregator.cs" />
     <Compile Include="IDevice.cs" />
-    <Compile Include="MCEL181123\MCEL181123DeviceItem.cs" />
+    <Compile Include="LogService.cs" />
+    <Compile Include="MCEL\MCEL181123DeviceI.cs" />
+    <Compile Include="MCEL\UintTest.cs" />
     <Compile Include="NiCan\NiCan.cs" />
     <Compile Include="NiCan\NiCanTools.cs" />
     <Compile Include="NiCan\NiCanIoException.cs" />
@@ -90,6 +92,25 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="IoService.cs" />
     <Compile Include="NiCan\NiCan_UnitTest_basics.cs" />
+    <Compile Include="StatusBar\EmptyStatus.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="StatusBar\DroppedFramesStatus.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="StatusBar\ParsedFramesStatus.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="StatusBar\PendingFramesStatus.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="StatusBar\VersionStatus.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="StatusBar\LogoStatus.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="TimerService.cs" />
     <Compile Include="View\HowIsWorkingForm.cs">
       <SubType>Form</SubType>
     </Compile>
