--- a/Konvolucio.MCEL181123/Konvolucio.MCEL181123.csproj
+++ b/Konvolucio.MCEL181123/Konvolucio.MCEL181123.csproj
@@ -72,10 +72,14 @@
     <Compile Include="Commands\PlayCommand.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="Commands\ResetCommand .cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="Commands\StopCommand.cs">
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="Common.cs" />
+    <Compile Include="DeviceExplorer.cs" />
     <Compile Include="Events\EventAggregator.cs" />
     <Compile Include="Events\ResetAppEvent .cs" />
     <Compile Include="Events\PlayAppEvent.cs" />
@@ -83,7 +87,8 @@
     <Compile Include="Events\UnitTest_EventAggregator.cs" />
     <Compile Include="IDevice.cs" />
     <Compile Include="LogService.cs" />
-    <Compile Include="MCEL\MCEL181123DeviceI.cs" />
+    <Compile Include="MCEL\MCEL181123Device.cs" />
+    <Compile Include="MCEL\MCEL181123DeviceCollection.cs" />
     <Compile Include="MCEL\UintTest.cs" />
     <Compile Include="NiCan\NiCan.cs" />
     <Compile Include="NiCan\NiCanTools.cs" />
@@ -101,7 +106,7 @@
     <Compile Include="StatusBar\ParsedFramesStatus.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="StatusBar\PendingFramesStatus.cs">
+    <Compile Include="StatusBar\WaitForParseFramesStatus.cs">
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="StatusBar\VersionStatus.cs">
@@ -111,22 +116,37 @@
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="TimerService.cs" />
+    <Compile Include="View\TreeNodes\ModulsTreeNode.cs" />
+    <Compile Include="View\TreeNodes\RacksTreeNode.cs" />
+    <Compile Include="View\TreeNodes\RxFramesTreeNode.cs" />
+    <Compile Include="View\TreeNodes\ParsedFrameTreeNode.cs" />
+    <Compile Include="View\TreeNodes\WaitForParseTreeNode.cs" />
+    <Compile Include="View\TreeNodes\DropFrameTreeNode.cs" />
     <Compile Include="View\HowIsWorkingForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="View\HowIsWorkingForm.Designer.cs" />
+    <Compile Include="View\HowIsWorkingForm.Designer.cs">
+      <DependentUpon>HowIsWorkingForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="View\MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="View\MainForm.Designer.cs" />
-    <Compile Include="View\MainViewControl.cs">
+    <Compile Include="View\MainForm.Designer.cs">
+      <DependentUpon>MainForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="View\TreeNodes\StatisticsTreeNode.cs" />
+    <Compile Include="View\SplitView.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="View\MainViewControl.Designer.cs" />
+    <Compile Include="View\SplitView.Designer.cs">
+      <DependentUpon>SplitView.cs</DependentUpon>
+    </Compile>
     <Compile Include="View\UpdatesForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="View\UpdatesForm.Designer.cs" />
+    <Compile Include="View\UpdatesForm.Designer.cs">
+      <DependentUpon>UpdatesForm.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Properties\licenses.licx" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -138,12 +158,18 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
-    <EmbeddedResource Include="View\HowIsWorkingForm.resx" />
+    <EmbeddedResource Include="View\HowIsWorkingForm.resx">
+      <DependentUpon>HowIsWorkingForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="View\MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="View\MainViewControl.resx" />
-    <EmbeddedResource Include="View\UpdatesForm.resx" />
+    <EmbeddedResource Include="View\SplitView.resx">
+      <DependentUpon>SplitView.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View\UpdatesForm.resx">
+      <DependentUpon>UpdatesForm.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -169,6 +195,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\dictionary48.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\adapter.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
