--- a/Konvolucio.MCEL181123/Konvolucio.MCEL181123.csproj
+++ b/Konvolucio.MCEL181123/Konvolucio.MCEL181123.csproj
@@ -90,11 +90,11 @@
     <Compile Include="Events\PlayAppEvent.cs" />
     <Compile Include="Events\StopAppEvent.cs" />
     <Compile Include="Events\UnitTest_EventAggregator.cs" />
-    <Compile Include="IDevice.cs" />
+    <Compile Include="Devices\IDevice.cs" />
     <Compile Include="LogService.cs" />
-    <Compile Include="MCEL\MCEL181123DeviceItem.cs" />
-    <Compile Include="MCEL\MCEL181123DeviceCollection.cs" />
-    <Compile Include="MCEL\UintTest.cs" />
+    <Compile Include="Devices\MCEL181123DeviceItem.cs" />
+    <Compile Include="Devices\MCEL181123DeviceCollection.cs" />
+    <Compile Include="Devices\UintTest.cs" />
     <Compile Include="NiCan\NiCan.cs" />
     <Compile Include="NiCan\NiCanTools.cs" />
     <Compile Include="NiCan\NiCanIoException.cs" />
@@ -102,6 +102,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="IoService.cs" />
     <Compile Include="NiCan\NiCan_UnitTest_basics.cs" />
+    <Compile Include="Signals\SiganlDictinary.cs" />
     <Compile Include="StatusBar\EmptyStatus.cs">
       <SubType>Component</SubType>
     </Compile>
@@ -148,11 +149,11 @@
     <Compile Include="View\UpdatesForm.Designer.cs">
       <DependentUpon>UpdatesForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="View\PowerControl.cs">
+    <Compile Include="View\SignalSendViewControl.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="View\PowerControl.Designer.cs">
-      <DependentUpon>PowerControl.cs</DependentUpon>
+    <Compile Include="View\SignalSendViewControl.Designer.cs">
+      <DependentUpon>SignalSendViewControl.cs</DependentUpon>
     </Compile>
     <EmbeddedResource Include="Properties\licenses.licx" />
     <EmbeddedResource Include="Properties\Resources.resx">
@@ -171,8 +172,8 @@
     <EmbeddedResource Include="View\MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="View\PowerControl.resx">
-      <DependentUpon>PowerControl.cs</DependentUpon>
+    <EmbeddedResource Include="View\SignalSendViewControl.resx">
+      <DependentUpon>SignalSendViewControl.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="View\UpdatesForm.resx">
       <DependentUpon>UpdatesForm.cs</DependentUpon>
