--- a/Konvolucio.MCEL181123/Konvolucio.MCEL181123.csproj
+++ b/Konvolucio.MCEL181123/Konvolucio.MCEL181123.csproj
@@ -102,7 +102,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="IoService.cs" />
     <Compile Include="NiCan\NiCan_UnitTest_basics.cs" />
-    <Compile Include="Signals\SiganlDictinary.cs" />
+    <Compile Include="Database\CanDatabase.cs" />
     <Compile Include="StatusBar\EmptyStatus.cs">
       <SubType>Component</SubType>
     </Compile>
@@ -122,6 +122,7 @@
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="TimerService.cs" />
+    <Compile Include="Database\UintTest.cs" />
     <Compile Include="View\TreeNodes\ModulsTreeNode.cs" />
     <Compile Include="View\TreeNodes\RacksTreeNode.cs" />
     <Compile Include="View\TreeNodes\TxFramesTreeNode.cs" />
