--- a/Konvolucio.MCEL181123/App.config
+++ b/Konvolucio.MCEL181123/App.config
@@ -49,6 +49,21 @@
             <setting name="GuiRefreshRateMs" serializeAs="String">
                 <value>1000</value>
             </setting>
+            <setting name="SendViewScope" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="SendViewRack" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="SendViewModul" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="SendViewName" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="SendViewValue" serializeAs="String">
+                <value>0</value>
+            </setting>
         </Konvolucio.MCEL181123.Properties.Settings>
     </userSettings>
 </configuration>
